---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 26.10.2024
  Bugfixes:
    - Changelog.
    - Wrong filter for item fission reactor stil used the 1.1 name not 2.0.
    - Corrected locals naming for Fusion - Fission.
    - Removed Un-used Locals from IR3.
    - Corrected some NO Locals left in English.
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 25.10.2024
  Features:
    - Deeper Compatibility with S-A.
    - Factoriopedia-simulations.
  Graphics:
    - Broken graphics.
    - Removed outdated graphics code.
    - More fixes to come.
  Changes:
    - Optional space science setting apering with S-A or SE.
    - Changed Weight values on Armour & Lasers.
    - Listed Dependencies: 1 removed, 1 name corrected.
    - Updated Recipes on 7-10.
    - Changed Tech to have crafting requirement instead of science. 
  Bugfixes:
    - Tech tree issue processing unit was applied to worng tech.
    - Made base mech armour use MK5 armour and prerequsite.
    - Removed vanilla S-A Tech, Item, Equipment: Battery MK3, Fusion Reactor.
  SpaceAge:
    - Added S-A SciencePacks to Par Armour Tech.
    - Changed Prerequsites to cont in the science packs.
  Thnaks:
    - @Mylon for help solving Factoriopedia Simulations.
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 22.10.2024
  Bugfixes:
    - Fixed release crash with missing file no idea what that was about.
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 22.10.2024
  Features:
    - Updated to work with 2.0 Base & S-A.
    - Added sounds to all items in mod.
    - Made sure equipping equipment can be equipted.(bug)
    - Added propper Weight values to all items in mod to be able to ship items in rocket for S-A.
  Changes: